--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Play:wght@400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
-body{
-   background-color: #E4E4E4;
-   display: flex;
-   justify-content: center;
-   font-family: "Inter", sans-serif;;
-}
-.container{
-    /* width: 580px;
-    height: 854px; */
-    display: flex;
-    flex-direction: column;
-    margin: 113px 630px 113px 630px;
-    gap: 33px;
-}
-.gameplay-box{
-    background-color: #F5F5F5;
-    width: 580px;
-    min-height: 580px;
-    border-radius: 37px;
-    padding: 49px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 25px;
-}
-.cross_animation{
-    opacity: 0;
-}
-.gameplay-box__grid-elem{
-    width: 144px;
-    height: 144px;
-    border-radius: 16px;
-    background-color: #E4E4E4;
-    padding: 17px;
-    box-shadow: #1F1F1F 10px 10px;
-}
 @keyframes fadeIn{
     from {
         opacity: 0;
@@ -51,12 +15,71 @@ body{
         box-shadow: #1F1F1F 5px 5px;
     }
 }
+body{
+   background-color: #E4E4E4;
+   display: flex;
+   justify-content: center;
+   font-family: "Inter", sans-serif;;
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    margin: 113px 630px 113px 630px;
+    gap: 33px;
+}
+.gameplay-box{
+    background-color: #F5F5F5;
+    width: 580px;
+    min-height: 580px;
+    border-radius: 37px;
+    padding: 49px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+}
+.cross_animation{
+    background-image: url(asset_cross_animation.svg);
+    height: 110px;
+    width: 110px;
+    opacity: 0;
+}
+.zero_animation{
+    background-image: url(asset_zero_animation.svg);
+    opacity: 0;
+    height: 110px;
+    width: 110px;
+}
+.gameplay-box__grid-elem{
+    width: 144px;
+    height: 144px;
+    border-radius: 16px;
+    background-color: #E4E4E4;
+    padding: 17px;
+    box-shadow: #1F1F1F 10px 10px;
+    border: none;
+}
 .gameplay-box__grid-elem:hover .cross_animation{
+    animation: fadeIn 0.5s forwards;
+    cursor: pointer;
+}
+.gameplay-box__grid-elem:hover .zero_animation{
     animation: fadeIn 0.5s forwards;
     cursor: pointer;
 }
 .gameplay-box__grid-elem:hover{
     animation: fadeInShadow 0.5s forwards;
+}
+.gameplay-box__zero{
+    background-image: url(asset_zero.svg);
+    background-size: 110px 110px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.gameplay-box__cross{
+    background-image: url(asset_cross.svg);
+    background-size: 110px 110px;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 .menu-block{
     width: 580px;
@@ -86,7 +109,7 @@ body{
     font-size: 48px;
     text-align: center;
     padding: 23px 130px;
-    visibility: hidden;
     border: none;
     cursor: pointer;
+    visibility: hidden;
 }
